# elgato-control-home-automation

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md
src/elgato_keylight/: __init__.py  _gui.py  cli.py  client.py  config.py  discovery.py  effects.py  mcp_server.py  models.py  panel.py  tray.py  waybar.py
