[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elgato-keylight"
version = "0.1.0"
description = "Control Elgato Key Lights from CLI, waybar, and MCP"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
discovery = ["zeroconf>=0.131"]

[project.scripts]
elgato = "elgato_keylight.cli:cli"
elgato-waybar = "elgato_keylight.waybar:main"
elgato-mcp = "elgato_keylight.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elgato_keylight"]
